# CMakeList.txt : CMake project for ch02, include source and define
# project specific logic here.
add_executable (ch02 "ch02.cpp" "ch02.h" )
add_executable (ch02_3_3 ch02_3_3.cpp)
add_executable (ch02_4 ch02_4.cpp)
add_executable (ch02_6 ch02_6.cpp)


add_executable (exercise_2_1_3 exercise_2_1_3.cpp)
add_executable (exercise_210 exercise_210.cpp)
